[gd_scene load_steps=2 format=3 uid="uid://crh76jo00gr7w"]

[ext_resource type="Script" path="res://Assets/Scripts/display_menu.gd" id="1_hi38b"]

[node name="Display" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_hi38b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESOLUTION"

[node name="Resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "1280 X 720"
popup/item_0/id = 0
popup/item_1/text = "1600 X 900"
popup/item_1/id = 1
popup/item_2/text = "1920 X 1080"
popup/item_2/id = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BACK"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FULLSCREEN"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
